<resources>
    <string name="app_name">Trcanje</string>
    <string name="start_track">Start track</string>
    <string name="stop_track">Stop track</string>
    <string name="zero_time">00:00:00</string>
    <string name="zero_distance">0 m</string>
    <string name="zero_speed">0 m/s</string>
    <string name="list_of_tracks">List of tracks</string>
    <string name="new_track">New track</string>
    <string name="zero">0</string>
    <string name="track_id">TRACK_ID</string>
    <string name="track">TRACK</string>
    <string name="enter_track_name">Enter track name:</string>
    <string name="nothing" />
    <string name="pause_track">Pause track</string>
    <string name="resume_track">Resume track</string>
    <string name="request_code">Request code</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
</resources>
